@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-30T08:13:55Z",
+  "timestamp" : "2023-11-01T00:52:42Z",
   "count_outdated" : 211,
   "uniques_outdated" : 182,
-  "count" : 217,
-  "uniques" : 188,
+  "count" : 218,
+  "uniques" : 189,
   "clones" : [
     {
       "timestamp": "2023-10-20T00:00:00Z",
@@ -43,6 +43,15 @@
     },
     {
       "timestamp": "2023-10-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-31T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
