@@ -1,6 +1,6 @@
 {
-  "count": 6,
-  "uniques": 2,
+  "count": 7,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2023-10-20T00:00:00Z",
@@ -24,6 +24,11 @@
     },
     {
       "timestamp": "2023-10-30T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-31T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
